--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ certifi==2018.10.15
 chardet==3.0.4
 Click==7.0
 colorama==0.4.0
-coverage==4.0.3
+coverage==4.5.1
 Flask==1.0.2
 Flask-JWT-Extended==3.13.1
+gunicorn==19.9.0
 idna==2.7
 isort==4.3.4
 itsdangerous==1.1.0
@@ -22,6 +23,7 @@ py==1.7.0
 PyJWT==1.6.4
 pylint==2.1.1
 pytest==3.9.3
+pytest-cov==2.6.0
 python-coveralls==2.9.1
 PyYAML==3.13
 requests==2.20.0
